[tool.poetry]
name = "alexs-monster"
version = "0.1.0"
description = "A discord bot to host debates."
authors = ["Akins <akins2229@gmail.com>", "Vanility <londonburts12754@gmail.com>"]
license = "GNU 3.0"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.3.2"
asyncio = "^3.4.3"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
